feat: auth endpoints doc
