# schema/validators/auth.validator.ts
@@ -9,3 +9,23 @@ export const signUpInput = object({
           lastName: string().notRequired().default(''),
      }),
 });
+
+export const verifyAccountInput = object({
+     body: object({
+          code: string().required('code is required'),
+          token: string().required('token is required'),
+     }),
+});
+
+export const requestVerificationInput = object({
+     body: object({
+          email: string().required('email is required').email('enter a valid email'),
+     }),
+});
+
+export const signInInput = object({
+     body: object({
+          credential: string().required('credential is required'),
+          password: string().required('password is required'),
+     }),
+});
